# ComfyUI_WhisperSRT

./: README.md  Whisper_text_srt.py  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/: Whisper_audio_to_text&srt.json
